Fix issues with footer on mobile

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -2,10 +2,9 @@ footer {
   background-color: black;
   color: white;
   text-align: center;
-  height: 30vh;
 }
 .footer-details {
-  padding: 0.5rem 0rem 1rem 0rem;
+  padding: 0.5rem 0rem 2rem 0rem;
   font-size: 15px;
 }
 .siteLogo {
