--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: Helvetica, sans-serif;
   background-color: #f4f4f4;
 }
@@ -137,4 +138,3 @@ a {
     display: none;
   }
 }
-
